Update outdated launcher docs